--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_PASSWORD=1
     ports:
-      - "5432:5432"
+      - "5433:5432"
 
   mysql:
     restart: always
@@ -33,32 +33,31 @@ services:
       - MYSQL_PASSWORD=1
       - MYSQL_ROOT_PASSWORD=1
     ports:
-      - "3306:3306"
+      - "3307:3306"
 
   mongodb:
     image: mongo:5.0.2
     restart: unless-stopped
-    env_file:
-      - ./js_project/.env.prod
+    command: mongod --auth
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=$MONGODB_USER
-      - MONGO_INITDB_ROOT_PASSWORD=$MONGODB_PASSWORD
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=aSLJqN22pBluITGH
+      - MONGO_INITDB_DATABASE=testdb
     ports:
       - "7017:27017"
 
   express:
     build: ./js_project
     restart: unless-stopped
-    env_file: ./js_project/.env
     hostname: express_js
     ports:
       - "3000:8080"
     environment:
       - DB_HOST=mongodb
-      - DB_USER=$MONGODB_USER
-      - DB_PASSWORD=$MONGODB_PASSWORD
-      - DB_NAME=$MONGODB_DATABASE
-      - DB_PORT=$MONGODB_DOCKER_PORT
+      - DB_USER=root
+      - DB_PASSWORD=aSLJqN22pBluITGH
+      - DB_NAME=testdb
+      - DB_PORT=27017
     stdin_open: true
     tty: true
     depends_on:
