--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
   django:
     build: ./django_project/
     container_name: django
-    command: ["python", "manage.py", "runserver", "0.0.0.0:8000" ]
+    command: > 
+       sh -c "python manage.py migrate &&
+              python manage.py runserver 0.0.0.0:8000"
     expose:
       - 8000
     ports:
