--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./django_project/
     container_name: django
     command: > 
-       sh -c "python manage.py migrate &&
+       sh -c "sleep 7 && python manage.py migrate &&
               python manage.py runserver 0.0.0.0:8000"
     expose:
       - 8000
